--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile files('libs/juhe_sdk_v_2_7.jar')
+    compile 'com.google.code.gson:gson:2.3.1'
 }
